tests/baselines/reference/internalAliasInitializedModuleInsideTopLevelModuleWithExport.errors.txt
internalAliasInitializedModuleInsideTopLevelModuleWithExport.ts(1,15): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
internalAliasInitializedModuleInsideTopLevelModuleWithExport.ts(2,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== internalAliasInitializedModuleInsideTopLevelModuleWithExport.ts (2 errors) ====
    export module a {
                  ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module b {
                      ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export class c {
            }
        }
    }
    
    export import b = a.b;
    export var x: b.c = new b.c();